fix(ADA-2975): Solve focus indicator overlapping

--- a/src/styles/_dropdown.scss
+++ b/src/styles/_dropdown.scss
@@ -40,7 +40,7 @@
     line-height: 18px;
     color: #fff;
     cursor: pointer;
-    padding-left: 20px;
+    margin-left: 20px;
     display: flex;
 
     .icon {
